Fix the color contrast issues for axe a11y audit
Elements with the following CSS classes fire the "Text elements must
have sufficient color contrast against the background" a11y violation in
the axe DevTools:

- [`tox-mbtn__select-label`](https://axe.deque.com/issues/7babe2d7-8d6f-4f82-a3f9-9f38e3d6ab09)
- [`tox-tbtn__select-label`](https://axe.deque.com/issues/a190e94d-b8fe-41f5-aa4c-ad14ef6fef4d)

https://dequeuniversity.com/rules/axe/4.3/color-contrast?application=AxeChrome

As far as I understand the only purpose of `@toolbar-background` and
`@menubar-background` is to dynamically generate a transparent SVG
background with a 1px bottom line.

So I'd suggest achieving absolutely the same result by setting the
`border-bottom` property and as a benefit improve accessibility.

--- a/modules/oxide/src/less/theme/components/menubar/menubar.less
+++ b/modules/oxide/src/less/theme/components/menubar/menubar.less
@@ -10,7 +10,6 @@
 //
 
 @menubar-background-color: @background-color;
-@menubar-background: url("data:image/svg+xml;charset=utf8,%3Csvg height='@{_menubar-height}' viewBox='0 0 40 @{_menubar-height}' width='40' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0' y='@{_menubar-divider-height}' width='100' height='1' fill='@{_menubar-row-separator-color}'/%3E%3C/svg%3E") left 0 top 0 @menubar-background-color;
 @menubar-padding-x: @toolbar-group-padding-x;
 @menubar-separator-color: @border-color;
 @menubar-row-separator-color: @border-color;
@@ -22,8 +21,8 @@
 
 .tox {
   .tox-menubar {
-    background: @menubar-background;
     background-color: @menubar-background-color;
+    border-bottom: 1px solid @menubar-row-separator-color;
     display: flex;
     flex: 0 0 auto;
     flex-shrink: 0;
