--- a/modules/oxide/src/less/theme/components/toolbar/toolbar.less
+++ b/modules/oxide/src/less/theme/components/toolbar/toolbar.less
@@ -10,7 +10,6 @@
 //
 
 @toolbar-background-color: @background-color;
-@toolbar-background: url("data:image/svg+xml;charset=utf8,%3Csvg height='@{_toolbar-height}' viewBox='0 0 40 @{_toolbar-height}' width='40' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0' y='@{_toolbar-divider-height}' width='100' height='1' fill='@{_toolbar-row-separator-color}'/%3E%3C/svg%3E") left 0 top @toolbar-padding-y @toolbar-background-color;
 @toolbar-row-separator-color: @toolbar-group-separator-color;
 @toolbar-separator-color: @border-color;
 @toolbar-padding-y: 0; // Note that a positive value doesn't work with toolbar collapsing into multiple rows. Will cause issues with the toolbar row separator
@@ -29,8 +28,8 @@
   .tox-toolbar,
   .tox-toolbar__primary,
   .tox-toolbar__overflow {
-    background: @toolbar-background;
     background-color: @toolbar-background-color;
+    border-bottom: 1px solid @toolbar-row-separator-color;
     display: flex;
     flex: 0 0 auto;
     flex-shrink: 0;
